fix: left aligned images now center aligned

--- a/@library/gallery.css
+++ b/@library/gallery.css
@@ -49,7 +49,7 @@
 	img {
 		max-width: 450px;
 		border-radius: 4px;
-		margin: unset;
+		margin: auto;
 		box-shadow: #313029 0px 48px 100px 0px;
 	}
 }
